bootstrap, other improvements

--- a/src/url_config.json
+++ b/src/url_config.json
@@ -6,7 +6,7 @@
     "leading_pitchers": "/json/named.leader_pitching_repeater.bam?sport_code='mlb'&results=15&game_type='R'&season='2021'&sort_column='era'&leader_pitching_repeater.col_in=era,name_display_first_last,player_id",
     "eras": "/json/named.leader_pitching_repeater.bam?sport_code='mlb'&results=15&game_type='R'&season='2021'&sort_column='era'&leader_pitching_repeater.col_in=era,name_display_first_last,player_id",
     "avgs": "/json/named.leader_hitting_repeater.bam?sport_code=%27mlb%27&results=15&game_type=%27R%27&season=%272020%27&sort_column=%27avg%27&leader_hitting_repeater.col_in=avg,name_display_first_last,player_id",
-    "career_hitting": "/json/named.sport_career_hitting.bam?league_list_id='mlb'&game_type={game_type}&player_id={player_id}",
-    "career_pitching": "/json/named.sport_career_pitching.bam?league_list_id='mlb'&game_type={game_type}&player_id={player_id}"
+    "career_hitting": "/json/named.sport_career_hitting.bam?league_list_id='mlb'&game_type=%27R%27&player_id='",
+    "career_pitching": "/json/named.sport_career_pitching.bam?league_list_id='mlb'&game_type=%27R%27&player_id='"
 
 }
