--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@primer/components": "^28.2.2",
+    "@primer/octicons-react": "^13.0.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bulma": "^0.9.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-gif-loader": "^0.6.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
+    "tailwindcss": "^2.1.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
